--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  text-align: center;
+  align-items: center;
   max-width: 1200px;
   padding: 0 4em 0 4em;
-  display: flex;
+  /* display: flex; */
 }
