api call for descriptions

--- a/src/components/Pokemon.scss
+++ b/src/components/Pokemon.scss
@@ -54,6 +54,12 @@
     font-size: 22px;
 }
 
+.move-item{
+    border-bottom: 2px solid rgb(122, 122, 122);
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
 //pokemon types
 .innerCard{
     position: relative;
