--- a/src/components/Pokemon.scss
+++ b/src/components/Pokemon.scss
@@ -60,6 +60,10 @@
     margin-bottom: 2px;
 }
 
+.move-description{
+    font-size: 10px;
+}
+
 //pokemon types
 .innerCard{
     position: relative;
