--- a/src/components/Pokemon.scss
+++ b/src/components/Pokemon.scss
@@ -12,14 +12,17 @@
     border-image-source: linear-gradient(to top, #dac339, #b09444);
 }
 
-.container{
-    width: 300px;
-    height: 400px;
+.outer-card{
+    width: 400px;
+    height: 500px;
     background: #edc416;
-    overflow: hidden;
+}
+
+.container {
+    display: flex;
     align-items: center;
-    text-align: center;
-    flex-direction: column;
+    justify-content: center;
+    margin-top: 5rem;
 }
 
 .description{
