--- a/src/components/Pokemon.scss
+++ b/src/components/Pokemon.scss
@@ -18,6 +18,9 @@
     background: #edc416;
 }
 
+.card-results{
+    margin-top: 4rem;
+}
 .container {
     display: flex;
     align-items: center;
@@ -45,9 +48,10 @@
 }
 
 .moves{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bolder;
     padding-top: 4px;
+    text-transform: capitalize;
 }
 
 .pokemonName{
@@ -55,6 +59,7 @@
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
+    text-transform: capitalize;
 }
 
 .move-item{
@@ -64,7 +69,7 @@
 }
 
 .move-description{
-    font-size: 10px;
+    font-size: 12px;
 }
 
 //pokemon types
