--- a/src/components/Pokemon.scss
+++ b/src/components/Pokemon.scss
@@ -32,19 +32,25 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 0 60px;
+    background-image: linear-gradient(to top, #dac339, #b09444);
+    border: 2px solid #dac339;
+    border-radius: 5px;
 }
 
 .description-item{
     margin: 3px;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 12px;
 }
+
 .pokemonSpirite{
     background: tan;
     text-decoration: inherit;
     font-family: system-ui;
     font-size: 1rem;
     padding: .2rem .5rem;
-    width: 40%;
+    width: 60%;
 }
 
 .moves{
@@ -178,4 +184,19 @@ img.icon {
 .HPIcon{
     display: flex;
     flex-direction: row;
+}
+
+.weakness{
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.weakness-icon {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+
+.type-descriptions{
+    display: inline-block;
 }
