--- a/src/components/Pokemon.scss
+++ b/src/components/Pokemon.scss
@@ -5,7 +5,7 @@
 .border-gradient{
     border: 10px solid;
     border-image-slice: 1;
-    border-width: 5px;
+    border-width: 8px;
 }
 
 .border-gradient-purple{
@@ -14,7 +14,7 @@
 
 .outer-card{
     width: 400px;
-    height: 500px;
+    height: 560px;
     background: #edc416;
 }
 
@@ -58,6 +58,10 @@
     font-weight: bolder;
     padding-top: 4px;
     text-transform: capitalize;
+}
+
+.move-list{
+    margin-top: 10px;
 }
 
 .pokemonName{
@@ -200,8 +204,30 @@ img.icon {
 .type-descriptions{
     display: flex;
     flex-wrap: wrap;
+    position: absolute;
+    width: 100%;
+    bottom: 53px;
 }
 
 .type-group{ 
     width: 32%;
+}
+
+.pokemon-descriptions{
+    font-size: 10px;
+    margin: 10px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 0;
+    padding: 3px;   
+}
+
+.pokemon-descriptions-border{
+    border: 10px solid;
+    border-image-slice: 1;
+    border-width: 3px;
+}
+
+.border-gradient-gold{
+    border-image-source: linear-gradient(to top, #dac339, #b09444);
 }
